# StdFace

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
samples/hubbard/default_model/: stan.in
samples/hubbard/wannier/: stan.in
src/: CMakeLists.txt  ChainLattice.c  FCOrtho.c  HoneycombLattice.c  Kagome.c  Ladder.c  Orthorhombic.c  Pyrochlore.c  SquareLattice.c  StdFace_ModelUtil.c  StdFace_ModelUtil.h  StdFace_main.c  StdFace_vals.h  TriangularLattice.c  Wannier90.c  dry.c  export_wannier90.c  export_wannier90.h  version.h
test/: CMakeLists.txt  almost_diff.py
test/hphi/: CMakeLists.txt  check.sh  make_cmakelists.sh  make_reference.sh
test/hphi/ctpq_spin_kagome/ref/: coulombinter.def  greentwo.def  lattice.gp  modpara.def
test/hphi/ctpq_spin_kagome_randomsphere/: stan.in
test/hphi/ctpq_spin_kagome_randomsphere/ref/: locspn.def
test/hphi/fulldiag_genspin_ladder/: stan.in
test/hphi/fulldiag_genspin_ladder/ref/: greentwo.def  lattice.gp  modpara.def
test/hphi/fulldiag_genspingc_ladder/: stan.in
test/hphi/fulldiag_genspingc_ladder/ref/: calcmod.def  greentwo.def  interall.def  lattice.gp  locspn.def  modpara.def  pair.def
test/hphi/fulldiag_ham_io/: stan.in
test/hphi/fulldiag_ham_io/ref/: calcmod.def
test/hphi/fulldiag_hubbard_chain/: stan.in
test/hphi/fulldiag_hubbard_chain/ref/: calcmod.def  greentwo.def
test/hphi/fulldiag_hubbardgc_tri/: stan.in
test/hphi/fulldiag_hubbardgc_tri/ref/: calcmod.def  coulombintra.def  greenone.def  greentwo.def  lattice.gp  locspn.def  modpara.def  pair.def  trans.def
test/hphi/fulldiag_kondo_chain/: stan.in
test/hphi/fulldiag_kondo_chain/ref/: calcmod.def  coulombinter.def  exchange.def  greenone.def  greentwo.def  hund.def  lattice.gp  locspn.def  modpara.def  trans.def
test/hphi/fulldiag_kondogc_chain/: stan.in
test/hphi/fulldiag_kondogc_chain/ref/: calcmod.def  coulombinter.def  exchange.def  greenone.def  greentwo.def  hund.def  lattice.gp  locspn.def  modpara.def  pair.def  trans.def
test/hphi/fulldiag_spin_tri/: stan.in
test/hphi/fulldiag_spin_tri/ref/: calcmod.def  exchange.def  hund.def  modpara.def
test/hphi/fulldiag_spingc_tri/: stan.in
test/hphi/fulldiag_spingc_tri/ref/: coulombinter.def  greentwo.def  modpara.def
test/hphi/lanczos_genspin_ladder/: stan.in
test/hphi/lanczos_genspin_ladder/ref/: greenone.def  greentwo.def  modpara.def
test/hphi/lanczos_genspin_ladder_restart/: stan.in
test/hphi/lanczos_genspin_ladder_restart/ref/: interall.def  modpara.def  pair.def
test/hphi/lanczos_genspingc_ladder/: stan.in
test/hphi/lanczos_genspingc_ladder/ref/: greenone.def  greentwo.def  interall.def  locspn.def  modpara.def
test/hphi/lanczos_hubbard_square_restart/: stan.in
test/hphi/lanczos_hubbard_square_restart/ref/: calcmod.def  modpara.def  namelist.def
test/hphi/lanczos_kondo_chain/: stan.in
test/hphi/lanczos_kondo_chain/ref/: calcmod.def  greentwo.def  modpara.def
test/hphi/lanczos_kondo_chain_restart/: stan.in
test/hphi/lanczos_kondo_chain_restart/ref/: calcmod.def  modpara.def  namelist.def
test/hphi/lanczos_kondogc_chain/: stan.in
test/hphi/lanczos_kondogc_chain/ref/: calcmod.def  greenone.def  modpara.def
test/hphi/lanczos_spinGC_DM/: stan.in
test/hphi/lanczos_spinGC_DM/ref/: coulombinter.def  hund.def  modpara.def  trans.def
test/hphi/lanczos_spin_kagome_restart/: stan.in
test/hphi/lanczos_spin_kagome_restart/ref/: calcmod.def  modpara.def
test/hphi/lanczos_spingc_honey/: stan.in
test/hphi/lanczos_spingc_honey/ref/: greenone.def  greentwo.def  modpara.def  pairlift.def  trans.def
test/hphi/lobcg_genspin_ladder/: stan.in
test/hphi/lobcg_genspin_ladder/ref/: greentwo.def  modpara.def
test/hphi/lobcg_genspin_ladder_restart/: stan.in
test/hphi/lobcg_genspin_ladder_restart/ref/: calcmod.def  interall.def  modpara.def  namelist.def
test/hphi/lobcg_genspingc_ladder/: stan.in
test/hphi/lobcg_genspingc_ladder/ref/: greenone.def  interall.def  modpara.def  pair.def  trans.def
test/hphi/lobcg_hubbard_square/: stan.in
test/hphi/lobcg_hubbard_square/ref/: modpara.def
test/hphi/lobcg_hubbard_square_restart/: stan.in
test/hphi/lobcg_hubbard_square_restart/ref/: calcmod.def  modpara.def
test/hphi/lobcg_hubbard_szconserv/: stan.in
test/hphi/lobcg_hubbard_szconserv/ref/: calcmod.def  modpara.def  trans.def
test/hphi/lobcg_hubbardgc_tri/: stan.in
test/hphi/lobcg_hubbardgc_tri/ref/: calcmod.def  modpara.def  trans.def
test/hphi/lobcg_kondo_chain/: stan.in
test/hphi/lobcg_kondo_chain/ref/: calcmod.def  lattice.gp  modpara.def
test/hphi/lobcg_kondo_chain_restart/: stan.in
test/hphi/lobcg_kondogc_chain/: stan.in
test/hphi/lobcg_spin_kagome/: stan.in
test/hphi/lobcg_spin_kagome_restart/: stan.in
test/hphi/lobcg_spingc_6body/: stan.in
test/hphi/lobcg_spingc_Sy/: stan.in
test/hphi/lobcg_spingc_hcor/: stan.in
test/hphi/lobcg_spingc_honey/: stan.in
test/hphi/spectrum_genspin_ladder/: stan.in
test/hphi/spectrum_hubbard_square/: stan.in
test/hphi/spectrum_hubbardgc_tri/: stan.in
test/hphi/spectrum_kondo_chain/: stan.in
test/hphi/spectrum_kondogc_chain/: stan.in
test/hphi/spectrum_spin_kagome/: stan.in
test/hphi/spectrum_spingc_honey/: stan.in
test/hphi/te_ac_hubbard_square_restart/: stan.in
test/hphi/te_dc_hubbard_square/: stan.in
test/hphi/te_hubbard_chain_interall_diagonal/: stan.in
test/hphi/te_kondo_chain_interall/: stan.in
test/hphi/te_pulse_hubbard_square/: stan.in
test/hphi/te_quench_hubbard_square/: stan.in
test/hphi/te_spin_chain_interall/: stan.in
test/hwave/: CMakeLists.txt  check.sh  make_cmakelists.sh  make_reference.sh
test/hwave/rpa_kobayashi_2004_coulomb/: stan.in
test/hwave/rpa_sample/: stan.in
test/hwave/uhfk_cdwsdw_input_1_cdw/: stan.in
test/hwave/uhfk_first_step/: stan.in
test/hwave/uhfr_first_step/: stan.in
test/mvmc/: CMakeLists.txt  check.sh  make_cmakelists.sh  make_reference.sh
test/uhf/: CMakeLists.txt  check.sh  make_cmakelists.sh  make_reference.sh
test/uhf/HubbardSquare/: stan.in
test/uhf/HubbardTriangle/: stan.in
(+158 files in other folders)
